# the-timer

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  LICENSE  NOTES.md  README.md  eslint.config.js  index.html  lefthook.yml  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
_generated/: api.d.ts
convex/: activities.ts  aggregates.ts  auth.ts  backfill.ts  categories.test.ts  categories.ts  clients.test.ts  clients.ts  convex.config.ts  diagnostics.ts  functions.ts  helpers.test.ts  http.ts  import_toggl.ts  invoice_presets.ts  invoices.test.ts  invoices.ts  logger.ts  projects.test.ts  projects.ts  rates.test.ts  schema.ts  search_filter.test.ts  seed.ts  setup.testing.ts  time_entries.test.ts  time_entries.ts  types.ts  user_settings.test.ts  user_settings.ts  users.ts  utils.test.ts  utils.ts
convex/_generated/: api.d.ts
convex/model/: analytics.ts  auth.ts  categories.ts  clients.ts  helpers.ts  invoice_presets.ts  invoices.ts  projects.ts  rates.ts  time_entries.ts  user_settings.ts
docs/: REQUIREMENTS.md  TESTING-TODO.md  TODO.md
docs/plans/: 2026-02-08-warm-earthy-redesign.md
scripts/: import-toggl.ts
src/: globals.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/island/: position.rs  window.rs
src-tauri/src/tray/: menu.rs  mod.rs  shortcut.rs  state.rs
src/components/: analytics-summary-strip.tsx  app-error-boundary.tsx  app-sidebar.tsx  chart-area-interactive.tsx  dock-item.tsx  dock.tsx  edit-timer-dialog.tsx  entity-management-table.tsx  login-page.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  running-timer-bar.tsx  searchable-combobox.tsx  section-cards.tsx  site-header.tsx  start-timer-dialog.tsx  time-entries-chart-bar.tsx  timer-entries-chart-radial-stacked.tsx  timer-entries-start-end-calendar.tsx
src/components/dashboard/: active-timer-widget.tsx  activity-feed.tsx  quick-start.tsx  today-summary-cards.tsx  unbilled-summary-card.tsx  widget-error-boundary.tsx
src/components/time-entries-table/: actions-cell.tsx  hooks.ts  (+20 more)
src/hooks/: use-analytics-chart-data.ts  use-deep-link-auth.ts  use-filters.ts  use-island-data-bridge.ts  use-live-elapsed-time.ts  use-tray-data-bridge.ts  useInfiniteQuery.ts  useStablePaginatedQuery.ts
src/lib/: export.test.ts  export.ts  logger.ts  optimistic-updates.ts  settings.tsx  types.ts  utils.test.ts  utils.ts
src/overlay/: island-app.tsx  main.tsx
src/routes/: __root.tsx
tasks/: lessons.md  todo.md
(+47 files in other folders)
