[package]
name = "tauri-convex"
version = "0.1.0-beta.1"
description = "Precision time tracking for macOS"
authors = ["mNutella"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_convex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
log = "0.4"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSScreen"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSGeometry"] }

